Removed legacy pom.xml and made porject compatible with Java 25